[project]
name = "tests"
version = "0.1.0"
description = "System Test Runner for staycurrent"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.1",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "psycopg[binary]>=3.1.18",
    "PyYAML>=6.0",
    "pytest-playwright>=0.5",
    "pexpect>=4.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["system", "bets"]
