[project]
name = "tests"
version = "0.1.0"
description = "System Test Runner for staycurrent"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.1",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "psycopg[binary]>=3.1.18",
    "PyYAML>=6.0",
    "pytest-playwright>=0.5",
    "pexpect>=4.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This project is a dependency shell + pytest suite, not an importable package —
# `uv pip install -e .` exists only to resolve the dependencies above. Without this,
# setuptools' flat-layout auto-discovery finds multiple top-level dirs (system/, bets/,
# bets/_archive/, ...) and fails with "Multiple top-level packages discovered in a
# flat-layout". Declaring no packages makes the editable install dependencies-only —
# which is all CI and local runs need, since tests run via pytest, never as an import.
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["system", "bets"]
